@@ -1,0 +1,35 @@
+TEMPLATE = lib
+
+CONFIG += thread warn_on plugin
+QMAKE_CXXFLAGS += -Os
+
+HEADERS += ../../../src/Plugin.h
+HEADERS += ../../../src/IndicatorPlugin.h
+HEADERS += ../../../src/Setting.h
+HEADERS += ../../../src/PlotLine.h
+HEADERS += ../../../src/ChartDb.h
+HEADERS += OVRLY.h
+
+SOURCES += ../../../src/Plugin.cpp
+SOURCES += ../../../src/IndicatorPlugin.cpp
+SOURCES += ../../../src/Setting.cpp
+SOURCES += ../../../src/PlotLine.cpp
+SOURCES += ../../../src/ChartDb.cpp
+SOURCES += OVRLY.cpp
+
+TARGET = OVRLY
+
+INCLUDEPATH += ../../../db-2.7.7/build_unix
+INCLUDEPATH += ../../../src
+
+LIBS += -L../../../db-2.7.7/build_unix -ldb
+LIBS += -L/usr/lib
+unix:linux-g++:LIBS += -ldl
+
+# mac os x options
+macx:QMAKE_CXXFLAGS += -bundle
+
+unix:OBJECTS_DIR = ../../../src
+
+target.path = /usr/lib/qtstalker/indicator
+INSTALLS += target
